@@ -25,6 +25,8 @@ t/05_notables.t
 t/06_create.t
 t/07_pk.sql
 t/07_pk.t
+t/08_prune.pl
+t/08_prune.t
 t/97_meta.t
 t/98_pod.t
 t/99_pmv.t
